--- a/app/src/main/res/layout/activity_add_pager.xml
+++ b/app/src/main/res/layout/activity_add_pager.xml
@@ -53,4 +53,14 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_end="196dp" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/pagerList"
+        android:layout_width="333dp"
+        android:layout_height="365dp"
+        android:layout_marginStart="39dp"
+        android:layout_marginEnd="39dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="146dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
