--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,23 @@
 
     />
 
+
+
+
+
+
     ]]>
 
-
+    <com.ismaeldivita.chipnavigation.ChipNavigationBar
+        android:layout_width="410dp"
+        android:layout_height="81dp"
+        android:background="#FFFFFF"
+        android:gravity="center"
+        app:cnb_menuResource="@menu/bottom_bar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/titleText"
@@ -25,21 +39,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="454dp"
-        android:layout_height="64dp"
-        android:background="#870000"
-        android:scrollbarSize="4dp"
-        app:itemIconSize="45dp"
-        app:itemIconTint="00FFFFFF"
-        app:itemTextColor="#00FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.511"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/menu_navigation" />
 
     <Button
         android:id="@+id/addPagerBtn"
@@ -68,7 +67,7 @@
         android:layout_marginTop="32dp"
         android:text="@string/vklopi"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:textColor="#870000"
+        android:textColor="#FF870000"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2" />
