--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#870000</color>
     <color name="colorPrimaryDark">#870000</color>
     <color name="colorAccent">#870000</color>
+    <color name="alerterColor">#000000</color>
     <color name="transparent">@android:color/transparent</color>
 </resources>
