--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,12 +110,14 @@
         android:layout_width="332dp"
         android:layout_height="359dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="14dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="192dp"
+        android:layout_marginBottom="36dp"
         app:layout_constraintBottom_toTopOf="@+id/addPagerBtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintHorizontal_bias="0.483"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleText">
 
         <LinearLayout
             android:layout_width="match_parent"
