--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -119,7 +119,7 @@
         android:layout_marginStart="176dp"
         android:layout_marginEnd="176dp"
         android:layout_marginBottom="24dp"
-        android:text="0%"
+        android:text="@string/_0"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/checkBoxShowAlertDialog"
         app:layout_constraintEnd_toEndOf="parent"
