changed alert dialogs

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,12 +20,12 @@
         android:id="@+id/bottom_bar"
         android:layout_width="410dp"
         android:layout_height="81dp"
+        android:layout_marginEnd="1dp"
         android:background="#FAFAFA"
         android:gravity="center"
         app:cnb_menuResource="@menu/bottom_bar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
