--- a/app/src/main/res/layout/activity_pager_alert.xml
+++ b/app/src/main/res/layout/activity_pager_alert.xml
@@ -7,15 +7,15 @@
     android:layout_height="match_parent">
 
 
-
-
     <ImageView
         android:id="@+id/imageMainWindow"
         android:layout_width="321dp"
         android:layout_height="243dp"
-        app:srcCompat="@drawable/alertdialog2"
-        tools:layout_editor_absoluteX="43dp"
-        tools:layout_editor_absoluteY="220dp" />
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="220dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/alertdialog2" />
 
     <LinearLayout
         android:layout_width="251dp"
