- minor UI fixes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,9 +48,10 @@
     <Button
         android:id="@+id/settingsBtn"
         style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="137dp"
-        android:layout_height="82dp"
+        android:layout_width="146dp"
+        android:layout_height="0dp"
         android:layout_marginStart="36dp"
+        android:layout_marginBottom="16dp"
         android:background="#00FFFFFF"
         android:drawableTop="@drawable/ic_settingssvg_35dp"
         android:text="@string/nastavitve"
@@ -61,9 +62,10 @@
     <Button
         android:id="@+id/addPagerBtn"
         style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="136dp"
-        android:layout_height="81dp"
-        android:layout_marginStart="228dp"
+        android:layout_width="132dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="224dp"
+        android:layout_marginBottom="16dp"
         android:background="#00FFFFFF"
         android:drawableTop="@drawable/ic_addpagersvg_35dp"
         android:text="@string/dodaj_pozivnik"
