--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="30sp"
+        android:onClick="checkPermissions"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,7 +27,7 @@
         android:layout_width="146dp"
         android:layout_height="36dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:button="@color/colorPrimaryDark"
         android:buttonTint="#870000"
         android:text="@string/vklopi"
@@ -43,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="571dp" />
+        app:layout_constraintGuide_begin="563dp" />
 
     <Button
         android:id="@+id/settingsBtn"
@@ -77,7 +78,7 @@
         android:id="@+id/devOptionsBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="268dp"
+        android:layout_marginStart="280dp"
         android:layout_marginBottom="100dp"
         android:text="@string/dev_options"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -85,8 +86,8 @@
 
     <ScrollView
         android:id="@+id/pagerList"
-        android:layout_width="334dp"
-        android:layout_height="447dp"
+        android:layout_width="336dp"
+        android:layout_height="440dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="14dp"
         android:layout_marginEnd="24dp"
