--- a/app/src/main/res/layout/activity_add_new_pager_dialog.xml
+++ b/app/src/main/res/layout/activity_add_new_pager_dialog.xml
@@ -75,12 +75,13 @@
         android:id="@+id/switchIntervencijeNet"
         android:layout_width="151dp"
         android:layout_height="43dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="28dp"
+        android:layout_marginEnd="1dp"
         android:text="Intervencije.net"
         android:textColor="#870000"
         android:thumbTint="#870000"
         app:layout_constraintEnd_toStartOf="@+id/addNewPagerBtn"
-        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textKeyword" />
 
