--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,6 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="30sp"
-        android:onClick="checkPermissions"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,7 +25,7 @@
         android:id="@+id/onoffSwitch"
         android:layout_width="146dp"
         android:layout_height="36dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="36dp"
         android:layout_marginTop="32dp"
         android:button="@color/colorPrimaryDark"
         android:buttonTint="#870000"
@@ -65,7 +64,7 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="132dp"
         android:layout_height="0dp"
-        android:layout_marginStart="224dp"
+        android:layout_marginStart="240dp"
         android:layout_marginBottom="16dp"
         android:background="#00FFFFFF"
         android:drawableTop="@drawable/ic_addpagersvg_35dp"
@@ -78,8 +77,8 @@
         android:id="@+id/devOptionsBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="280dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginStart="248dp"
+        android:layout_marginBottom="88dp"
         android:text="@string/dev_options"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -91,9 +90,13 @@
         android:layout_marginStart="49dp"
         android:layout_marginEnd="49dp"
         android:layout_marginBottom="39dp"
+        android:transcriptMode="normal"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/devOptionsBtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:listfooter="@android:layout/simple_list_item_1"
+        tools:visibility="visible" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
