--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,8 +77,8 @@
         android:id="@+id/devOptionsBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="248dp"
-        android:layout_marginBottom="88dp"
+        android:layout_marginStart="192dp"
+        android:layout_marginBottom="84dp"
         android:text="@string/dev_options"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -97,6 +97,19 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:listfooter="@android:layout/simple_list_item_1"
         tools:visibility="visible" />
+
+    <ToggleButton
+        android:id="@+id/permissionsBtn"
+        android:layout_width="94dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="39dp"
+        android:layout_marginEnd="8dp"
+        android:buttonTint="#FFFFFF"
+        android:text="@string/klikni_me"
+        android:textOff="@string/klikni_me"
+        android:textOn="@string/deluje"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pagerList" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
