--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,6 +80,7 @@
         android:layout_marginStart="240dp"
         android:layout_marginBottom="88dp"
         android:text="@string/dev_options"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -90,7 +91,7 @@
         android:layout_height="412dp"
         android:layout_marginStart="49dp"
         android:layout_marginEnd="49dp"
-        android:layout_marginBottom="39dp"
+        android:layout_marginBottom="40dp"
         android:transcriptMode="normal"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/devOptionsBtn"
