--- a/app/src/main/res/layout/activity_add_new_pager_dialog.xml
+++ b/app/src/main/res/layout/activity_add_new_pager_dialog.xml
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textFireSMS" />
 
     <EditText
-        android:id="@+id/textKeyword"
+        android:id="@+id/keywordText"
         android:layout_width="284dp"
         android:layout_height="52dp"
         android:layout_marginTop="8dp"
@@ -55,7 +55,7 @@
         android:text="DODAJ"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textKeyword" />
+        app:layout_constraintTop_toBottomOf="@+id/keywordText" />
 
     <Button
         android:id="@+id/cancelAddPager"
@@ -83,7 +83,7 @@
         android:thumbTint="#870000"
         app:layout_constraintEnd_toStartOf="@+id/addNewPagerBtn"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textKeyword" />
+        app:layout_constraintTop_toBottomOf="@+id/keywordText" />
 
     <EditText
         android:id="@+id/textPhoneNumber"
@@ -94,7 +94,7 @@
         android:ems="10"
         android:hint="Tel. številka"
         android:inputType="phone"
-        app:layout_constraintBottom_toTopOf="@+id/textKeyword"
+        app:layout_constraintBottom_toTopOf="@+id/keywordText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textPagerName" />
