--- a/app/src/main/res/layout/activity_developer_options.xml
+++ b/app/src/main/res/layout/activity_developer_options.xml
@@ -18,4 +18,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/testAlertPagerBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="132dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="135dp"
+        android:text="@string/pozivnik_okence"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/testAlerterBtn" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
